--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,9 @@
   <nav class="site-nav">
     <div class="container">
       <div class="site-navigation">
-        <a href="index.html" class="logo m-0">WebDev <span class="text-primary">Agency</span></a>
+        <a href="index.html" class="logo m-0">
+          <img src="images/Trishul_Tech_sideways.jpeg__1_-removebg-preview.png" alt="Logo" class="img-fluid">
+        </a>
 
         <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
           <li class="active"><a href="index.html">Home</a></li>
@@ -134,20 +136,19 @@
           <div class="quick-contact-item d-flex align-items-center mb-4">
             <span class="flaticon-house"></span>
             <address class="text">
-              123 Tech Park Avenue, Suite 500<br>
-              San Francisco, CA 94107
+              Goregaon East, Mumbai<br>
             </address>
           </div>
           <div class="quick-contact-item d-flex align-items-center mb-4">
             <span class="flaticon-phone-call"></span>
             <address class="text">
-              +1 (415) 555-0123
+              +91 93720 00951
             </address>
           </div>
           <div class="quick-contact-item d-flex align-items-center mb-4">
             <span class="flaticon-mail"></span>
             <address class="text">
-              contact@webdevagency.com
+              trishultechs@gmail.com
             </address>
           </div>
           <div class="quick-contact-item d-flex align-items-center mb-4">
@@ -173,7 +174,7 @@
           <div class="owl-single owl-carousel no-nav">
             <div class="testimonial mx-auto">
               <figure class="img-wrap">
-                <img src="images/person_2.jpg" alt="Image" class="img-fluid">
+                <img src="images/person_1.jpg" alt="Web Development Office" class="img-fluid">
               </figure>
               <h3 class="name">Adam Aderson</h3>
               <blockquote>
@@ -183,7 +184,7 @@
 
             <div class="testimonial mx-auto">
               <figure class="img-wrap">
-                <img src="images/person_3.jpg" alt="Image" class="img-fluid">
+                <img src="images/person_2.jpg" alt="Web Development Team" class="img-fluid">
               </figure>
               <h3 class="name">Lukas Devlin</h3>
               <blockquote>
@@ -193,7 +194,7 @@
 
             <div class="testimonial mx-auto">
               <figure class="img-wrap">
-                <img src="images/person_4.jpg" alt="Image" class="img-fluid">
+                <img src="images/person_3.jpg" alt="Web Development Project" class="img-fluid">
               </figure>
               <h3 class="name">Kayla Bryant</h3>
               <blockquote>
@@ -216,19 +217,12 @@
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <div class="widget">
-              <h3 class="heading">About Tour</h3>
+              <h3 class="heading">Trishul Techs</h3>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
             <div class="widget">
               <ul class="list-unstyled social">
-                <li><a href="#"><span class="icon-twitter"></span></a></li>
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
-                <li><a href="#"><span class="icon-facebook"></span></a></li>
-                <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li><a href="#"><span class="icon-dribbble"></span></a></li>
-                <li><a href="#"><span class="icon-pinterest"></span></a></li>
-                <li><a href="#"><span class="icon-apple"></span></a></li>
-                <li><a href="#"><span class="icon-google"></span></a></li>
               </ul>
             </div>
           </div>
@@ -236,9 +230,9 @@
             <div class="widget">
               <h3 class="heading">Pages</h3>
               <ul class="links list-unstyled">
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about.html">About Us</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -268,17 +262,17 @@
 
 
 
-    <div class="inner dark">
+    <!-- <div class="inner dark">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-8 mb-3 mb-md-0 mx-auto">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> <!-- License information: https://untree.co/license/ --> Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> License information: https://untree.co/license/ Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
             </p>
           </div>
           
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <div id="overlayer"></div>
