--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 	<nav class="site-nav">
 		<div class="container">
 			<div class="site-navigation">
-				<a href="index.html" class="logo m-0">Tour <span class="text-primary">.</span></a>
+				<a href="index.html" class="logo m-0">
+					<img src="images/Trishul_Tech_sideways.jpeg__1_-removebg-preview.png" alt="Logo" class="img-fluid">
+				</a>
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
 					<li class="active"><a href="index.html">Home</a></li>
@@ -72,7 +74,7 @@
 					<div class="intro-wrap">
 						<h1 class="mb-5"><span class="d-block">Transform Your Business</span> With <span class="typed-words"></span></h1>
 
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-12">
 								<form class="form">
 									<div class="row mb-2">
@@ -93,7 +95,6 @@
 										<div class="col-sm-12 col-md-6 mb-3 mb-lg-0 col-lg-3">
 											<input type="text" class="form-control" placeholder="Timeline">
 										</div>
-
 									</div>    
 									<div class="row align-items-center">
 										<div class="col-sm-12 col-md-6 mb-3 mb-lg-0 col-lg-4">
@@ -109,16 +110,16 @@
 									</div>
 								</form>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="slides">
-						<img src="images/hero-slider-1.jpg" alt="Image" class="img-fluid active">
-						<img src="images/hero-slider-2.jpg" alt="Image" class="img-fluid">
-						<img src="images/hero-slider-3.jpg" alt="Image" class="img-fluid">
-						<img src="images/hero-slider-4.jpg" alt="Image" class="img-fluid">
-						<img src="images/hero-slider-5.jpg" alt="Image" class="img-fluid">
+						<img src="images/pexels-emre-akyol-320381804-18096281.jpg" alt="Image" class="img-fluid active">
+						<img src="images/pexels-fotios-photos-16129728.jpg" alt="Image" class="img-fluid">
+						<img src="images/portrait 1.jpg" alt="Image" class="img-fluid">
+						<img src="images/portrait 2.webp" alt="Image" class="img-fluid">
+						<img src="images/portrait 3.webp" alt="Image" class="img-fluid">
 					</div>
 				</div>
 			</div>
@@ -136,7 +137,7 @@
 			</div>
 			<div class="row align-items-stretch">
 				<div class="col-lg-4 order-lg-1">
-					<div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/hero-slider-1.jpg');"></div></div></div>
+					<div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/pexels-firmbee-com-22729701-6963740.jpg');"></div></div></div>
 				</div>
 
 				<div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" >
@@ -225,7 +226,7 @@
 
 
 
-	<div class="untree_co-section">
+	<!-- <div class="untree_co-section">
 		<div class="container">
 			<div class="row text-center justify-content-center mb-5">
 				<div class="col-lg-7"><h2 class="section-title text-center">Our Recent Projects</h2></div>
@@ -234,12 +235,12 @@
 			<div class="owl-carousel owl-3-slider">
 
 				<div class="item">
-					<a class="media-thumb" href="images/hero-slider-1.jpg" data-fancybox="gallery">
+					<a class="media-thumb" href="images/pexels-emre-akyol-320381804-18096281.jpg" data-fancybox="gallery">
 						<div class="media-text">
 							<h3>E-commerce Platform</h3>
 							<span class="location">Web Development</span>
 						</div>
-						<img src="images/hero-slider-1.jpg" alt="Image" class="img-fluid">
+						<img src="images/E-commerce-Portrait-Banner.jpg" alt="Image" class="img-fluid">
 					</a> 
 				</div>
 
@@ -249,7 +250,7 @@
 							<h3>Corporate Website</h3>
 							<span class="location">Web Design</span>
 						</div>
-						<img src="images/hero-slider-2.jpg" alt="Image" class="img-fluid">
+						<img src="images/corporate website.png" alt="Image" class="img-fluid">
 					</a> 
 				</div>
 
@@ -259,7 +260,7 @@
 							<h3>Mobile App</h3>
 							<span class="location">App Development</span>
 						</div>
-						<img src="images/hero-slider-3.jpg" alt="Image" class="img-fluid">
+						<img src="images/mobile app.jpg" alt="Image" class="img-fluid">
 					</a> 
 				</div>
 
@@ -269,7 +270,7 @@
 							<h3>Booking System</h3>
 							<span class="location">Web Application</span>
 						</div>
-						<img src="images/hero-slider-4.jpg" alt="Image" class="img-fluid">
+						<img src="images/booking website.jpg" alt="Image" class="img-fluid">
 					</a> 
 				</div>
 
@@ -279,14 +280,14 @@
 							<h3>Portfolio Website</h3>
 							<span class="location">Web Design</span>
 						</div>
-						<img src="images/hero-slider-5.jpg" alt="Image" class="img-fluid">
+						<img src="images/portfolio website.png" alt="Image" class="img-fluid">
 					</a> 
 				</div>
 
 			</div>
 
 		</div>
-	</div>
+	</div> -->
 
 
 	<div class="untree_co-section testimonial-section mt-5">
@@ -429,7 +430,7 @@
 				<div class="col-md-12">
 					<h2 class="mb-2 text-white">Lets you Explore the Best. Contact Us Now</h2>
 					<p class="mb-4 lead text-white text-white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, fugit?</p>
-					<p class="mb-0"><a href="booking.html" class="btn btn-outline-white text-white btn-md font-weight-bold">Get in touch</a></p>
+					<p class="mb-0"><a href="contact.html" class="btn btn-outline-white text-white btn-md font-weight-bold">Get in touch</a></p>
 				</div>
 			</div>
 		</div>
@@ -446,12 +447,7 @@
 						</div>
 						<div class="widget">
 							<ul class="list-unstyled social">
-								<li><a href="#"><span class="icon-twitter"></span></a></li>
 								<li><a href="#"><span class="icon-instagram"></span></a></li>
-								<li><a href="#"><span class="icon-facebook"></span></a></li>
-								<li><a href="#"><span class="icon-linkedin"></span></a></li>
-								<li><a href="#"><span class="icon-github"></span></a></li>
-								<li><a href="#"><span class="icon-dribbble"></span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -469,13 +465,11 @@
 					</div>
 					<div class="col-md-6 col-lg-2">
 						<div class="widget">
-							<h3 class="heading">Company</h3>
+							<h3 class="heading">Pages</h3>
 							<ul class="links list-unstyled">
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Our Team</a></li>
-								<li><a href="#">Careers</a></li>
-								<li><a href="#">Contact</a></li>
-								<li><a href="#">Blog</a></li>
+								<li><a href="about.html">About Us</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
 					</div>
@@ -495,17 +489,17 @@
 
 
 
-		<div class="inner dark">
+		<!-- <div class="inner dark">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-md-8 mb-3 mb-md-0 mx-auto">
-						<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> <!-- License information: https://untree.co/license/ -->Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
+						<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a>License information: https://untree.co/license/ Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
 						</p>
 					</div>
 					
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<div id="overlayer"></div>
