--- a/about.html
+++ b/about.html
@@ -47,7 +47,9 @@
   <nav class="site-nav">
     <div class="container">
       <div class="site-navigation">
-        <a href="index.html" class="logo m-0">Tour <span class="text-primary">.</span></a>
+        <a href="index.html" class="logo m-0">
+          <img src="images/Trishul_Tech_sideways.jpeg__1_-removebg-preview.png" alt="Logo" class="img-fluid">
+        </a>
 
         <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
           <li><a href="index.html">Home</a></li>
@@ -70,7 +72,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 mx-auto text-center">
           <div class="intro-wrap">
-            <h1 class="mb-0">About WebDev Agency</h1>
+            <h1 class="mb-0">About Trishul Techs</h1>
             <p class="text-white">We are a team of passionate developers and designers dedicated to creating exceptional digital experiences that help businesses thrive in the digital world.</p>
           </div>
         </div>
@@ -85,11 +87,7 @@
       <div class="row">
         <div class="col-lg-7">
           <div class="owl-single dots-absolute owl-carousel">
-            <img src="images/slider-1.jpg" alt="Free HTML Template by Untree.co" class="img-fluid rounded-20">
-            <img src="images/slider-2.jpg" alt="Free HTML Template by Untree.co" class="img-fluid rounded-20">
-            <img src="images/slider-3.jpg" alt="Free HTML Template by Untree.co" class="img-fluid rounded-20">
-            <img src="images/slider-4.jpg" alt="Free HTML Template by Untree.co" class="img-fluid rounded-20">
-            <img src="images/slider-5.jpg" alt="Free HTML Template by Untree.co" class="img-fluid rounded-20">
+            <img src="images/pexels-rdne-7310202.jpg" alt="Free HTML Template by Untree.co" class="img-fluid rounded-20">
           </div>
         </div>
         <div class="col-lg-5 pl-lg-5 ml-auto">
@@ -112,7 +110,7 @@
     </div>
   </div>
 
-  <div class="untree_co-section">
+  <!-- <div class="untree_co-section">
     <div class="container">
       <div class="row justify-content-center mb-5">
         <div class="col-md-6 text-center">
@@ -163,7 +161,7 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
 
   
@@ -218,10 +216,10 @@
 
         <div class="col-lg-6">
           <figure class="img-play-video">
-            <a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=mwtbEGNABWU" data-fancybox>
+            <!-- <a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=mwtbEGNABWU" data-fancybox>
               <span></span>
-            </a>
-            <img src="images/hero-slider-2.jpg" alt="Web Development Process" class="img-fluid rounded-20">
+            </a> -->
+            <img src="images/pexels-format-380633-1029757.jpg" alt="Web Development Process" class="img-fluid rounded-20">
           </figure>
         </div>
 
@@ -250,7 +248,7 @@
     </div>
   </div>
   
-  <div class="py-5 cta-section">
+  <!-- <div class="py-5 cta-section">
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
@@ -300,7 +298,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="site-footer">
     <div class="inner first">
@@ -308,19 +306,12 @@
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <div class="widget">
-              <h3 class="heading">About Tour</h3>
+              <h3 class="heading">Trishul Techs</h3>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             </div>
             <div class="widget">
               <ul class="list-unstyled social">
-                <li><a href="#"><span class="icon-twitter"></span></a></li>
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
-                <li><a href="#"><span class="icon-facebook"></span></a></li>
-                <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li><a href="#"><span class="icon-dribbble"></span></a></li>
-                <li><a href="#"><span class="icon-pinterest"></span></a></li>
-                <li><a href="#"><span class="icon-apple"></span></a></li>
-                <li><a href="#"><span class="icon-google"></span></a></li>
               </ul>
             </div>
           </div>
@@ -328,9 +319,9 @@
             <div class="widget">
               <h3 class="heading">Pages</h3>
               <ul class="links list-unstyled">
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about.html">About Us</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -360,17 +351,17 @@
 
 
 
-    <div class="inner dark">
+    <!-- <div class="inner dark">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-8 mb-3 mb-md-0 mx-auto">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> <!-- License information: https://untree.co/license/ --> Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> License information: https://untree.co/license/Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
             </p>
           </div>
           
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <div id="overlayer"></div>
