--- a/services.html
+++ b/services.html
@@ -47,7 +47,9 @@
   <nav class="site-nav">
     <div class="container">
       <div class="site-navigation">
-        <a href="index.html" class="logo m-0">Tour <span class="text-primary">.</span></a>
+        <a href="index.html" class="logo m-0">
+          <img src="images/Trishul_Tech_sideways.jpeg__1_-removebg-preview.png" alt="Logo" class="img-fluid">
+        </a>
 
         <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
           <li><a href="index.html">Home</a></li>
@@ -85,7 +87,6 @@
       <div class="row">
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
-            <a href="#" class="d-block mb-3"><img src="images/hero-slider-1.jpg" alt="Image" class="img-fluid"></a>
             <div class="d-flex">
               <div>
                 <h3><a href="#">Custom Web Development</a></h3>
@@ -96,7 +97,6 @@
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
-            <a href="#" class="d-block mb-3"><img src="images/hero-slider-2.jpg" alt="Image" class="img-fluid"></a>
             <div class="d-flex">
               <div>
                 <h3><a href="#">E-commerce Solutions</a></h3>
@@ -107,7 +107,6 @@
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
-            <a href="#" class="d-block mb-3"><img src="images/hero-slider-3.jpg" alt="Image" class="img-fluid"></a>
             <div class="d-flex">
               <div>
                 <h3><a href="#">Mobile App Development</a></h3>
@@ -118,7 +117,6 @@
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="media-1">
-            <a href="#" class="d-block mb-3"><img src="images/hero-slider-4.jpg" alt="Image" class="img-fluid"></a>
             <div class="d-flex">
               <div>
                 <h3><a href="#">UI/UX Design</a></h3>
@@ -176,7 +174,7 @@
       </div>
       <div class="row align-items-stretch">
         <div class="col-lg-4 order-lg-1">
-          <div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/hero-slider-1.jpg');"></div></div></div>
+          <div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('images/corporate website.png');"></div></div></div>
         </div>
 
         <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" >
@@ -241,17 +239,12 @@
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <div class="widget">
-              <h3 class="heading">About WebDev Agency</h3>
+              <h3 class="heading">Trishul Techs</h3>
               <p>We are a team of passionate web developers and designers dedicated to creating exceptional digital experiences. Our mission is to help businesses thrive in the digital world.</p>
             </div>
             <div class="widget">
               <ul class="list-unstyled social">
-                <li><a href="#"><span class="icon-twitter"></span></a></li>
                 <li><a href="#"><span class="icon-instagram"></span></a></li>
-                <li><a href="#"><span class="icon-facebook"></span></a></li>
-                <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li><a href="#"><span class="icon-github"></span></a></li>
-                <li><a href="#"><span class="icon-dribbble"></span></a></li>
               </ul>
             </div>
           </div>
@@ -269,13 +262,11 @@
           </div>
           <div class="col-md-6 col-lg-2">
             <div class="widget">
-              <h3 class="heading">Company</h3>
+              <h3 class="heading">Pages</h3>
               <ul class="links list-unstyled">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Our Team</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="about.html">About Us</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -295,17 +286,17 @@
 
 
 
-    <div class="inner dark">
+    <!-- <div class="inner dark">
       <div class="container">
         <div class="row text-center">
           <div class="col-md-8 mb-3 mb-md-0 mx-auto">
-            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> <!-- License information: https://untree.co/license/ --> Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> License information: https://untree.co/license/  Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
             </p>
           </div>
           
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <div id="overlayer"></div>
