--- a/contact.html
+++ b/contact.html
@@ -250,9 +250,10 @@
             <div class="widget">
               <h3 class="heading">Contact</h3>
               <ul class="list-unstyled quick-info links">
-                <li class="email"><a href="#">mail@example.com</a></li>
-                <li class="phone"><a href="#">+1 222 212 3819</a></li>
-                <li class="address"><a href="#">43 Raymouth Rd. Baltemoer, London 3910</a></li>
+                <li class="email"><a href="#">trishultechs@gmail.com</a></li>
+                <li class="phone"><a href="#">+91 9372000951</a></li>
+								<li class="phone"><a href="#">+91 7666616753</a></li>
+								<li class="address"><a href="#">Goregaon East, Mumbai, Maharashtra</a></li>
               </ul>
             </div>
           </div>
