--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 				<div class="row">
 					<div class="col-md-6 col-lg-4">
 						<div class="widget">
-							<h3 class="heading">About WebDev Agency</h3>
+							<h3 class="heading">About Trishul Techs</h3>
 							<p>We are a team of passionate web developers and designers dedicated to creating exceptional digital experiences. Our mission is to help businesses thrive in the digital world through innovative web solutions.</p>
 						</div>
 						<div class="widget">
@@ -477,9 +477,10 @@
 						<div class="widget">
 							<h3 class="heading">Contact</h3>
 							<ul class="list-unstyled quick-info links">
-								<li class="email"><a href="#">hello@webdevagency.com</a></li>
-								<li class="phone"><a href="#">+1 234 567 8900</a></li>
-								<li class="address"><a href="#">123 Tech Street, Silicon Valley, CA 94025</a></li>
+								<li class="email"><a href="#">trishultechs@gmail.com.com</a></li>
+								<li class="phone"><a href="#">+91 9372000951</a></li>
+								<li class="phone"><a href="#">+91 7666616753</a></li>
+								<li class="address"><a href="#">Goregaon East, Mumbai, Maharashtra</a></li>
 							</ul>
 						</div>
 					</div>
