--- a/services.html
+++ b/services.html
@@ -89,8 +89,8 @@
           <div class="media-1">
             <div class="d-flex">
               <div>
-                <h3><a href="#">Custom Web Development</a></h3>
-                <p>Tailored web solutions built with modern technologies to meet your specific business needs and goals.</p>
+                <h3><a href="#">Web Design & Development</a></h3>
+                <p>Professional website design and development services, creating visually appealing and functional websites that represent your brand effectively.</p>
               </div>
             </div>
           </div>
@@ -99,8 +99,8 @@
           <div class="media-1">
             <div class="d-flex">
               <div>
-                <h3><a href="#">E-commerce Solutions</a></h3>
-                <p>Powerful online stores with secure payment gateways, inventory management, and seamless user experience.</p>
+                <h3><a href="#">Website Redesign</a></h3>
+                <p>Modernize your existing website with fresh designs, improved functionality, and enhanced user experience to stay competitive in the digital landscape.</p>
               </div>
             </div>
           </div>
@@ -109,8 +109,8 @@
           <div class="media-1">
             <div class="d-flex">
               <div>
-                <h3><a href="#">Mobile App Development</a></h3>
-                <p>Native and cross-platform mobile applications that deliver exceptional user experiences across all devices.</p>
+                <h3><a href="#">Dynamic & Static Websites</a></h3>
+                <p>Custom-built dynamic and static websites tailored to your specific needs, whether you need a simple informational site or a complex web application.</p>
               </div>
             </div>
           </div>
@@ -119,8 +119,8 @@
           <div class="media-1">
             <div class="d-flex">
               <div>
-                <h3><a href="#">UI/UX Design</a></h3>
-                <p>Beautiful, intuitive interfaces that enhance user engagement and drive conversions.</p>
+                <h3><a href="#">SEO Services</a></h3>
+                <p>Comprehensive search engine optimization strategies to improve your website's visibility, rankings, and organic traffic.</p>
               </div>
             </div>
           </div>
@@ -133,31 +133,43 @@
     <div class="container">
       <div class="row">
         <div class="col-6 col-md-6 col-lg-3">
-          <div class="service text-center">
-            <span class="icon-code"></span>
-            <h3>Web Development</h3>
-            <p>Custom websites built with the latest technologies and best practices for optimal performance.</p>
+          <div class="media-1">
+            <div class="d-flex">
+              <div>
+                <h3><a href="#">Social Media Promotion</a></h3>
+                <p>Strategic social media marketing campaigns to increase brand awareness, engage with your audience, and drive business growth.</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-3">
-          <div class="service text-center">
-            <span class="icon-shopping-cart"></span>
-            <h3>E-commerce</h3>
-            <p>Complete online store solutions with secure payment processing and inventory management.</p>
+          <div class="media-1">
+            <div class="d-flex">
+              <div>
+                <h3><a href="#">Management Software</a></h3>
+                <p>Custom management systems and software solutions to streamline your business operations and improve efficiency.</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-3">
-          <div class="service text-center">
-            <span class="icon-mobile"></span>
-            <h3>Mobile Apps</h3>
-            <p>Native and cross-platform mobile applications for iOS and Android devices.</p>
+          <div class="media-1">
+            <div class="d-flex">
+              <div>
+                <h3><a href="#">Social Media Handling</a></h3>
+                <p>Professional social media management services to maintain your online presence, engage with customers, and build brand loyalty.</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-3">
-          <div class="service text-center">
-            <span class="icon-search"></span>
-            <h3>SEO & Marketing</h3>
-            <p>Comprehensive digital marketing strategies to increase your online visibility and reach.</p>
+          <div class="media-1">
+            <div class="d-flex">
+              <div>
+                <h3><a href="#">Digital Marketing</a></h3>
+                <p>Integrated digital marketing solutions to help you reach your target audience and achieve your business objectives.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -274,9 +286,10 @@
             <div class="widget">
               <h3 class="heading">Contact</h3>
               <ul class="list-unstyled quick-info links">
-                <li class="email"><a href="#">hello@webdevagency.com</a></li>
-                <li class="phone"><a href="#">+1 234 567 8900</a></li>
-                <li class="address"><a href="#">123 Tech Street, Silicon Valley, CA 94025</a></li>
+                <li class="email"><a href="#">trishultechs@gmail.com</a></li>
+                <li class="phone"><a href="#">+91 9372000951</a></li>
+								<li class="phone"><a href="#">+91 7666616753</a></li>
+								<li class="address"><a href="#">Goregaon East, Mumbai, Maharashtra</a></li>
               </ul>
             </div>
           </div>
